# bubu

./: README.md
rusty/: .gitignore  Cargo.toml
rusty/src/: main.rs  routes.rs
rusty/src/geo/: geo.rs
rusty/src/meal/: meal.rs
rusty/src/nasa/: nasa.rs
scripts/: get_new_tft_song.sh  meal_random_recipe.py  nasa_image_of_the_day.py  update_all.sh
scripts/server/: deploy_server.sh  start_server.sh  stop_server.sh
svelty/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
svelty/src/: app.html
svelty/src/blocks/: Image.svelte
svelty/src/components/: backButton.svelte
svelty/src/routes/: +page.svelte
svelty/src/routes/api/tft/: +server.js
svelty/src/routes/geo/: +page.svelte
svelty/src/routes/meal/: +page.svelte
svelty/src/routes/nasa/: +page.svelte
svelty/src/routes/tft/: +page.svelte
