[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
serde = "1.0.203"
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["cors"]}
http = "1.1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.9.2"
